# dmcpplinq

./: CMakeLists.txt  README.md
include/: cpplinq.h  cpplinq_utils.h  dmcpplinq.h  dmcpplinq_config.h.in
src/dmcpplinq_module/: dmcpplinq_module.cpp  dmcpplinq_module.def  dmcpplinq_module.h
test/AllTest/: AllTest.cpp
test/AnyTest/: AnyTest.cpp
test/AverageTest/: AverageTest.cpp
test/ConcatTest/: ConcatTest.cpp
test/ContainsTest/: ContainsTest.cpp
test/CountTest/: CountTest.cpp
test/DistinctTest/: DistinctTest.cpp
test/ElementAtTest/: ElementAtTest.cpp
test/ForeachTest/: ForeachTest.cpp
test/LeftJoinTest/: LeftJoinTest.cpp
test/MaxTest/: MaxTest.cpp
test/MinTest/: MinTest.cpp
test/OrderByTest/: OrderByTest.cpp
test/ReverseTest/: ReverseTest.cpp
test/SelectTest/: SelectTest.cpp
test/SkipTest/: SkipTest.cpp
test/SkipWhileTest/: SkipWhileTest.cpp
test/SumTest/: SumTest.cpp
test/TakeTest/: TakeTest.cpp
test/TakeWhileTest/: TakeWhileTest.cpp
test/ToDequeTest/: ToDequeTest.cpp
test/ToListTest/: ToListTest.cpp
test/ToSetTest/: ToSetTest.cpp
test/ToVectorTest/: ToVectorTest.cpp
test/WhereTest/: WhereTest.cpp
test/dmcpplinqtest/: dmcpplinqtest.cpp
